Fixed hover effect, aligned center for laptops

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,10 @@
   flex-direction: column;
   gap: 40px;
 
+  @media only screen and (max-width: $laptop) {
+    align-items: center;
+  }
+
   @media only screen and (max-width: $tablet) {
     max-width: 100%;
     align-items: center;
