--- a/src/components/TodoForm.scss
+++ b/src/components/TodoForm.scss
@@ -57,8 +57,15 @@
     font-size: $default-size * 0.8;
   }
 
-  &:hover {
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      background-color: $purple;
+      color: $black;
+    }
+  }
+
+  &:active {
     background-color: $purple;
-    color: $black;
+    color: $gray;
   }
 }
