--- a/src/vars.scss
+++ b/src/vars.scss
@@ -11,6 +11,6 @@ $graymuted: rgba(121, 116, 116, 0.644);
 $container: 830px;
 
 //Media
-$desktop: 1200px;
+$laptop: 1200px;
 $tablet: 767px;
 $phone: 425px;
